# Ribasim

./: .JuliaFormatter.toml  .dvcignore  .env.default  .gitattributes  .gitignore  .nojekyll  .pre-commit-config.yaml  .sonarcloud.properties  .typos.toml  AGENTS.md  CNAME  CONTEXT.md  LICENSE  Manifest-v1.12.toml  Manifest.toml  Project.toml  README.md  README.rst  Ribasim-python.spdx.json  Ribasim.spdx.json  changelog.html  codecov.yml  components.jl  connect.jl  contact.html  diff.md  dvc.yaml  env_setup.bat  env_setup.sh  environment.yml  graphplot.jl  index.html  input-simplified.jl  input.jl  install.html  install.ps1  known_issues.html  lib.jl  lsw.jl  lychee.toml  (+23 more)
.CondaPkg/: meta  pixi.toml
.devcontainer/: devcontainer.json  dockerfile
.docker/: .env  compose.yml  start.sh  stop.sh  test.sh
.dvc/: config
.github/: CLAUDE.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.teamcity/: pom.xml  settings.kts
Bach/: Project.toml
Duet/: Project.toml
Mozart/: Project.toml
Orchestra/: Project.toml
compile/: README.md
concept/: allocation.html  concept.html  core.html  equations.html  modelconcept.html  numerics.html
core/: Manifest.toml  Project.toml
coupling/: MetaSwapInterface.jl  metamod.jl
data/: .gitignore  integration.toml
debug/: debug.jl
dev/: addnode.html  allocation.html  benchmark.html  bmi.html  ci.html  copilot.html  core.html  index.html  numerics.html  python.html  qgis.html  qgis_test_plan.html  release.html
docs/: .gitignore  Manifest.toml  Project.toml  _quarto-manual.yml  _quarto-website.yml  _quarto.yml  changelog.qmd  contact.qmd  coupling-demo.qmd  demo.ipynb  developer.qmd  equations.qmd  faq.qmd  gen_python.jl  gen_schema.jl  index.qmd  install.ps1  install.qmd  intro.md  intro.qmd  known_issues.qmd  make.jl  modflow.md  modflow.qmd  modflow_concepts.md  modflow_water_levels.md  pull_request_template.md  references.bib  run_ribasim.py  user_allocation.qmd
examples/: basic.py
getting-started/: examples.html  install.html
guide/: coupling.html  debug.html  delwaq.html  examples.html  installing-other-versions.html  (+4 more)
python/ribasim/: README.md  __init__.py  input_base.py  level_control.py  model.py  pump.py  pyproject.toml  tabulated_rating_curve.py  types.py
python/ribasim/ribasim/: __init__.py  basin.py  cli.py  config.py  control.py  db_utils.py  edge.py  flow_boundary.py  fractional_flow.py  input_base.py  level_boundary.py  level_control.py  level_exporter.py  linear_level_connection.py  linear_resistance.py  manning_connection.py  manning_resistance.py  migrations.py  model.py  models.py  node.py  node_icons.py  pump.py  schemas.py  styles.py  tabulated_rating_curve.py  terminal.py  types.py  utils.py  validation.py
python/ribasim/ribasim/delwaq/: README.md  __init__.py  generate.py  parse.py  plot.py  util.py
python/ribasim/ribasim/delwaq/reference/: dimr_config.xml
python/ribasim/ribasim/delwaq/template/: B5_bounddata.inc.j2  B6_wasteloads.inc.j2  B8_initials.inc.j2  delwaq.atr.j2  delwaq.inp.j2
python/ribasim/ribasim/geometry/: __init__.py  area.py  base.py  edge.py  link.py  node.py
python/ribasim/ribasim/node_types/: __init__.py  basin.py  control.py  discrete_control.py  flow_boundary.py  fractional_flow.py  interval_control.py  level_boundary.py  linear_resistance.py  manning_resistance.py  outlet.py  pid_control.py  pump.py  tabulated_rating_curve.py  terminal.py  user.py  weir.py
python/ribasim/ribasim/nodes/: __init__.py  basin.py  continuous_control.py  discrete_control.py  flow_boundary.py  flow_demand.py  fractional_flow.py  level_boundary.py  level_demand.py  linear_resistance.py  manning_resistance.py  observation.py  outlet.py  pid_control.py  pump.py  tabulated_rating_curve.py  terminal.py  user_demand.py
python/ribasim/ribasim/styles/: AllocationFlowStyle.qml  AllocationStyle.qml  BasinNodeStyle.qml  BasinStyle.qml  Basin_areaStyle.qml  Basin_areaStyle.sld  ConcentrationStyle.qml  EdgeStyle.qml  EdgeStyle.sld  FlowBoundary_areaStyle.qml  FlowLinkStyle.qml  FlowStyle.qml  LinkStyle.qml  NodeStyle.qml  NodeStyle.sld  README.md
python/ribasim/tests/: conftest.py  test_delwaq.py  test_edge.py  test_hydromt.py  test_input_base.py  test_io.py  test_link.py  test_migrations.py  test_model.py  test_node.py  test_node_icons.py  test_outlet.py  test_schemas.py  test_utils.py  test_validation.py
python/ribasim_api/: README.md  pyproject.toml
python/ribasim_api/ribasim_api/: __init__.py  ribasim_api.py
python/ribasim_api/tests/: conftest.py  test_bmi.py
python/ribasim_testmodels/: README.md  pyproject.toml
python/ribasim_testmodels/ribasim_testmodels/: __init__.py  allocation.py  backwater.py  basic.py  bucket.py  continuous_control.py  control.py  discrete_control.py  doc_example.py  dutch_waterways.py  equations.py  interval_control.py  invalid.py  junction.py  nederrijn.py  observation.py  pid_control.py  time.py  trivial.py  two_basin.py  utils.py
python/ribasim_testmodels/tests/: test_models.py
ribasim_qgis/: .coveragerc  LICENSE  __init__.py  metadata.txt  pyproject.toml  resources.py  resources.qrc  ribasim_qgis.py
ribasim_qgis/core/: arrow.py  geopackage.py  model.py  netcdf.py  nodes.py  observations.py  topology.py
ribasim_qgis/scripts/: enable_plugin.py  enable_plugins.py  install_imod_qgis.py  install_into_qgis.py  install_plugin_reloader.py  install_qgis_plugin.py  install_ribasim_qgis.py  qgis_testrunner.py  run_qgis_tests.py  run_qgis_ui_tests.py
ribasim_qgis/tests/: __init__.py  conftest.py  test_load_plugin.py  test_model.py  test_netcdf.py  test_observations.py  test_plot_widget.py  test_ribasim_cli_lookup.py
ribasim_qgis/tests/core/: test_model.py
ribasim_qgis/tests/data/: simple_valid.toml  with_netcdf.toml
ribasim_qgis/tests/ui/: test_load_plugin.py
ribasim_qgis/tomllib/: __init__.py  _parser.py  _re.py  _types.py
ribasim_qgis/ui_tests/: test_load_plugin.py
ribasim_qgis/widgets/: dataset_widget.py  nodes_widget.py  plot_widget.py  plotly-2.30.0.min.js  plotly-2.4.2.min.js  results_widget.py  ribasim_widget.py  task.py
(+880 files in other folders)
