[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ribasim"
description = "Pre- and post-process Ribasim"
readme = "README.md"
authors = [
    { name = "Deltares and contributors", email = "ribasim.info@deltares.nl" },
]
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
]
requires-python = ">=3.10"
dependencies = [
    "geopandas",
    "matplotlib",
    "numpy",
    "pandas",
    "pandera >= 0.18",
    "pyarrow",
    "pydantic ~= 2.0",
    "pyogrio",
    "shapely >= 2.0",
    "tomli",
    "tomli-w",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest", "pytest-xdist", "pytest-cov", "ribasim_testmodels"]
netcdf = ["xugrid"]
delwaq = ["jinja2", "networkx", "ribasim[netcdf]"]
all = ["ribasim[tests]", "ribasim[netcdf]", "ribasim[delwaq]"]

[project.urls]
Documentation = "https://deltares.github.io/Ribasim"
Source = "https://github.com/Deltares/Ribasim"

[tool.hatch.version]
path = "ribasim/__init__.py"

[tool.hatch.build.targets.sdist]
artifacts = ["delwaq/reference/*", "delwaq/template/*"]
