[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ribasim"
description = "Pre- and post-process Ribasim"
readme = "README.md"
authors = [
    { name = "Deltares and contributors", email = "ribasim.info@deltares.nl" },
]
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
]
requires-python = ">=3.12"
dependencies = [
    "datacompy >=0.16",
    "geopandas >=1.0",
    "matplotlib >=3.9",
    "netCDF4 >=1.7.1",
    "numpy >=2.0",
    "packaging >=23.0",
    "pandas >=2.2",
    "pandera >=0.25",
    "pyarrow >=17.0",
    "pydantic >=2.0",
    "pyogrio >=0.8",
    "shapely >=2.0",
    "tomli >=2.0",
    "tomli-w >=1.0",
    "xarray >=2023.11",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-xdist",
    "pytest-cov",
    "ribasim_testmodels",
    "teamcity-messages",
]
netcdf = ["xugrid"]
delwaq = ["jinja2", "networkx", "ribasim[netcdf]"]
all = ["ribasim[tests]", "ribasim[netcdf]", "ribasim[delwaq]"]

[project.urls]
Documentation = "https://ribasim.org/"
Source = "https://github.com/Deltares/Ribasim"

[tool.hatch.version]
path = "ribasim/__init__.py"

[tool.hatch.build.targets.sdist]
artifacts = ["delwaq/reference/*", "delwaq/template/*"]

[tool.pytest.ini_options]
markers = [
    "regression: Older models that are not on the current database schema.",
]
