[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ribasim_api"
description = "Python bindings for libribasim"
readme = "README.md"
authors = [{ name = "Deltares and contributors", email = "ribasim.info@deltares.nl" }]
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
]
requires-python = ">=3.10"
dependencies = [
    "xmipy"
]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest", "ribasim", "ribasim_testmodels"]

[tool.setuptools]
zip-safe = true

[tool.setuptools.dynamic]
version = { attr = "ribasim_api.__version__" }

[tool.setuptools.packages.find]
include = ["ribasim_api", "ribasim_api.*"]

[tool.setuptools.package-data]
"ribasim_api" = ["py.typed"]

[project.urls]
Documentation = "https://deltares.github.io/Ribasim"
Source = "https://github.com/Deltares/Ribasim"
