[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ribasim_api"
description = "Python bindings for libribasim"
readme = "README.md"
authors = [{ name = "Deltares and contributors", email = "ribasim.info@deltares.nl" }]
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
]
requires-python = ">=3.10"
dependencies = [
    "xmipy"
]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest", "ribasim", "ribasim_testmodels"]

[project.urls]
Documentation = "https://deltares.github.io/Ribasim"
Source = "https://github.com/Deltares/Ribasim"

[tool.hatch.version]
path = "ribasim_api/__init__.py"
