[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ribasim_testmodels"
description = "Ribasim Testmodels"
readme = "README.md"
authors = [
    { name = "Julian Hofer", email = "Julian.Hofer@deltares.nl" },
]
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
]
requires-python = ">=3.10"
dependencies = [
    "ribasim"
]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest"]

[tool.setuptools]
zip-safe = true

[tool.setuptools.dynamic]
version = { attr = "ribasim_testmodels.__version__" }

[tool.setuptools.packages.find]
include = ["ribasim_testmodels"]

[tool.setuptools.package-data]
"ribasim_testmodels" = ["py.typed"]

[project.urls]
Documentation = "https://deltares.github.io/Ribasim"
Source = "https://github.com/Deltares/Ribasim"
