[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ribasim_testmodels"
description = "Ribasim Testmodels"
readme = "README.md"
authors = [{ name = "Deltares and contributors", email = "ribasim.info@deltares.nl" }]
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
]
requires-python = ">=3.10"
dependencies = ["ribasim", "geopandas", "numpy", "pandas"]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest"]

[project.urls]
Documentation = "https://ribasim.org/"
Source = "https://github.com/Deltares/Ribasim"

[tool.hatch.version]
path = "ribasim_testmodels/__init__.py"
